Fix tooltip alignment on safari

--- a/resources/assets/less/bem/forum-topic-nav.less
+++ b/resources/assets/less/bem/forum-topic-nav.less
@@ -167,6 +167,7 @@
     background-color: @gray-dark;
     padding: (@spacing / 2) (@spacing * 2);
     color: @grey-f;
+    flex: none;
 
     &::before {
       content: ' ';
